<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxsmall"
        android:text="@string/settings_units"
        android:textSize="@dimen/textsize_xxlarge" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxsmall"
        android:text="@string/settings_refreshing"
        android:textSize="@dimen/textsize_xxlarge" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxsmall"
        android:text="@string/settings_time_format"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="@dimen/textsize_xxlarge" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxsmall"
        android:checked="true"
        android:text="@string/settings_gps"
        android:textSize="@dimen/textsize_xxlarge" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxsmall"
        android:text="@string/settings_current_location"
        android:textSize="@dimen/textsize_xxlarge" />
</LinearLayout>