<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".TownChangeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_town"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_search"
            android:layout_marginStart="@dimen/spacing_xxsmall"
            android:layout_marginTop="@dimen/spacing_xxsmall"
            android:layout_marginBottom="@dimen/spacing_xxsmall"
            android:layout_weight="1"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_et_town"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/til_town"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/design_default_color_secondary"
                android:textColorHint="@color/design_default_color_secondary"
                android:textSize="@dimen/textsize_xxlarge"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Buttons"
            android:id="@+id/btn_select_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxxsmall"
            android:layout_marginEnd="@dimen/spacing_xxsmall"
            android:layout_marginBottom="@dimen/spacing_xxsmall"
            android:layout_weight="5"
            android:text="@string/btn_selectTown"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxsmall"
        android:layout_marginTop="@dimen/spacing_xsmall"
        android:layout_marginEnd="@dimen/spacing_xxsmall"
        android:orientation="horizontal">

        <CheckBox
            style="@style/CheckBoxes"
            android:id="@+id/cb_wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/cb_wind"/>

        <CheckBox
            style="@style/CheckBoxes"
            android:id="@+id/cb_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cb_pressure"/>
    </LinearLayout>

</LinearLayout>