<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wthr_frgmnt_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_header"
    android:isScrollContainer="true"
    tools:context=".WthrFragment">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_wthr_to_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xsmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="@dimen/textsize_xxlarge">

                    <TextView
                        android:id="@+id/tv_wthr_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxsmall"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xxsmall"
                        android:text="@string/tv_wthr_location"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textsize_location_wthr"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_current_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxsmall"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xxsmall"
                        android:text="@string/tv_current_date"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textsize_xlarge"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_wthr_location" />

                    <TextView
                        android:id="@+id/weather_icon"
                        android:layout_width="@dimen/size_wthr_logo"
                        android:layout_height="@dimen/size_wthr_logo"
                        android:layout_marginStart="@dimen/spacing_xsmall"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xsmall"
                        android:contentDescription="@string/content_description"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="@dimen/textsize_wthr_value"
                        android:visibility="visible"
                        app:layout_constraintEnd_toStartOf="@+id/tv_wthr_value"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_current_date" />

                    <TextView
                        android:id="@+id/tv_wthr_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xsmall"
                        android:text="@string/tv_wthr_value"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textsize_wthr_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_current_date" />

                    <TextView
                        android:id="@+id/tv_wthr_dscrptn"
                        style="@style/LightMediumText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxsmall"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xxsmall"
                        android:text="@string/tv_wthr_dscrptn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_wthr_value" />

                    <TextView
                        android:id="@+id/tv_wthr_wind_info"
                        style="@style/LightMediumText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxsmall"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xxsmall"
                        android:layout_marginBottom="@dimen/spacing_xsmall"
                        android:text="@string/tv_wthr_wind_info"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_wthr_dscrptn"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/tv_wthr_pressure_info"
                        style="@style/LightMediumText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxsmall"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xxsmall"
                        android:text="@string/tv_wthr_pressure_info"
                        android:textSize="@dimen/textsize_xlarge"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_wthr_wind_info" />

                    <TextView
                        android:id="@+id/tv_onWeek"
                        style="@style/LightMediumText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_xxsmall"
                        android:layout_marginTop="@dimen/spacing_xsmall"
                        android:layout_marginEnd="@dimen/spacing_xxsmall"
                        android:layout_marginBottom="@dimen/spacing_xsmall"
                        android:text="@string/tv_onWeek"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_wthr_pressure_info"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/size_loading_bar"
                android:layout_height="@dimen/size_loading_bar"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>